<resources>
    <string name="app_name">Fitr</string>

    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>

    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_header">Header</string>
    <string name="drawer_item_workout">Workout</string>
    <string name="drawer_item_distance">Distance</string>

    <string name="activity_intro_text">Select your activity and hit Start!</string>
    <string name="activity_startbutton_label">Start</string>
    <string name="activity_stopbutton_label">Stop</string>

    <string name="signin_button_label">Sign In</string>
    <string name="register_button_label">Register</string>


    <string name="form_username_label">Username</string>
    <string name="form_password_label">Password</string>

</resources>