<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- The ActionBar displayed at the top -->
    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- The main content view where fragments are loaded -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp">

        <TextView
            android:id="@+id/label_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_username_label" />

        <EditText
            android:id="@+id/entry_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_username" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_username"
            android:text="@string/form_password_label" />

        <EditText
            android:id="@+id/entry_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/entry_password"
            android:text="@string/register_button_label" />
    </RelativeLayout>

</LinearLayout>